src/objects/City__c.object
<CustomObject>
    <fields>
        <fullName>City_Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>City_Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>City_Country</relationshipLabel>
        <relationshipName>City_Country</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Letters__c</fullName>
        <label>Letters</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Numbers__c</fullName>
        <label>Numbers</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Letters__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>City</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>City Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>